# mini-os

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
easy-fs/: Cargo.toml
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: batch.rs  board.rs  config.rs  console.rs  entry.asm  lang_items.rs  linker.ld  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/drivers/: block.rs  bus.rs  gpu.rs  mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/chardev/: mod.rs  ns16550a.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: address.rs  file_mapping.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  gui.rs  mod.rs  process.rs  sync.rs  thread.rs
os/src/task/: action.rs  context.rs  id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  signal.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  Makefile  README.md  build.py
user/.cargo/: config.toml
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
