[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
# RustSBI可执行Machine级别的RISC-V指令。它提供的接口规范称为SBI。
# sbi-rt封装了SBI服务的接口，供内核调用
sbi-rt = { version = "0.0.2", features = ["legacy"] }
log = "0.4.22"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
# VirtIO总线架构的设备驱动程序库，支持块设备、网络设备、GPU等。
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
volatile = "0.3"
