[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"
description = "实现可加载进用户内核的用户程序示例"

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
